fix(ui): Attributes section of credentials has extra padding at bottom (#1083)

--- a/src/ui/components/CardDetails/CardDetailsBlock/CardDetailsBlock.scss
+++ b/src/ui/components/CardDetails/CardDetailsBlock/CardDetailsBlock.scss
@@ -89,7 +89,7 @@
 
   &.has-content {
     .card-header {
-      margin-bottom: 1.25rem;
+      padding-bottom: 0.75rem;
     }
   }
 
@@ -117,7 +117,7 @@
   @media screen and (min-width: 250px) and (max-width: 370px) {
     &.has-content {
       .card-header {
-        margin-bottom: 0.8rem;
+        padding-bottom: 0.6rem;
       }
     }
 
