--- a/src/ui/components/CardDetails/CardDetailsExpandAttributes/CardDetailsAttributes.scss
+++ b/src/ui/components/CardDetails/CardDetailsExpandAttributes/CardDetailsAttributes.scss
@@ -1,12 +1,15 @@
 @mixin expand-group {
-  .container-nested-list-item {
-    margin-top: 0.625rem;
-  }
-
   .nested-list-item {
+    padding: 0.5rem 0;
+
+    &:last-of-type {
+      padding-bottom: 0;
+    }
+
     ion-item {
       display: flex;
       align-items: center;
+      height: 1.5rem;
 
       &::part(native) {
         padding: 0.75rem 0;
@@ -15,6 +18,16 @@
 
     &:not(.container-nested-list-item) {
       padding-left: 1.5rem;
+    }
+  }
+
+  @media screen and (min-width: 250px) and (max-width: 370px) {
+    .nested-list-item {
+      padding: 0.4rem 0;
+
+      ion-item {
+        height: 1.2rem;
+      }
     }
   }
 }
